[gd_scene load_steps=16 format=3 uid="uid://d2dlkectxmi1j"]

[ext_resource type="PackedScene" uid="uid://dg0i68ysq1t73" path="res://dialogue/dialogue_2.tscn" id="1_dx74y"]
[ext_resource type="Script" uid="uid://gjmnqndbhedd" path="res://Game Scenes/Social Engineering/social_engineering.gd" id="1_wr6yt"]
[ext_resource type="FontFile" uid="uid://8swg6l30n6tg" path="res://MainMenu/Font/CyberTechnoDemo-Regular.otf" id="2_kt1pb"]
[ext_resource type="FontFile" uid="uid://dawgypwmlmqre" path="res://Game Scenes/Password/VIEMON.ttf" id="2_vbgg1"]
[ext_resource type="LabelSettings" uid="uid://uroktm3eaxo0" path="res://Game Scenes/Phishing/score_label.tres" id="3_niels"]
[ext_resource type="LabelSettings" uid="uid://6i4uxhfky4l0" path="res://MainMenu/Font/Main_Menu_NAME_100px.tres" id="4_kt1pb"]
[ext_resource type="FontFile" uid="uid://dlxeofevbk4t2" path="res://MainMenu/Font/LuckiestGuy-Regular.ttf" id="5_vbgg1"]
[ext_resource type="LabelSettings" uid="uid://b5w6k36ggwek" path="res://Resources/tip_label_settings.tres" id="5_wwrvp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wr6yt"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8i7ln"]
font = ExtResource("2_vbgg1")
font_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vbgg1"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wwrvp"]
font = ExtResource("2_kt1pb")
font_size = 25
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l7fyo"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wwrvp"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8i7ln"]
bg_color = Color(1, 0.509804, 0.458824, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="social_engineering" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wr6yt")
e_file = "res://Game Scenes/Social Engineering/social_engineering.json"

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wr6yt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1100, 300)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 90.0
offset_top = -350.0
offset_right = -90.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Option1" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="Option2" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="Option3" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="main" type="Panel" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 27.0
offset_right = 1240.0
offset_bottom = 338.0

[node name="MarginContainer" type="MarginContainer" parent="main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 90
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="main_text" type="Label" parent="main/MarginContainer"]
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_8i7ln")
autowrap_mode = 2

[node name="Panel" type="Panel" parent="main"]
layout_mode = 0
offset_right = 800.0
offset_bottom = 52.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vbgg1")

[node name="context" type="Label" parent="main/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_wwrvp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="block_click" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dialogue" parent="." instance=ExtResource("1_dx74y")]
visible = false
d_file = "res://Game Scenes/Social Engineering/social_dialoge.json"

[node name="tip_panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -391.0
offset_top = 25.0
offset_right = -21.0
offset_bottom = 205.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_l7fyo")

[node name="tip" type="Label" parent="tip_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_kt1pb")
theme_override_font_sizes/font_size = 35
text = "test
"
label_settings = ExtResource("5_wwrvp")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="FinalScorePanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wwrvp")

[node name="Score" type="Panel" parent="FinalScorePanel"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -190.0
offset_right = 125.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8i7ln")

[node name="FinalScoreText" type="Label" parent="FinalScorePanel/Score"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -59.0
offset_right = 89.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
text = "20"
label_settings = ExtResource("3_niels")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="FinalScorePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -341.0
offset_top = 42.0
offset_right = 333.0
offset_bottom = 159.0
grow_horizontal = 2
text = "Your Score is:"
label_settings = ExtResource("4_kt1pb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="retry" type="Button" parent="FinalScorePanel"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = -302.0
offset_right = 480.0
offset_bottom = -152.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_vbgg1")
theme_override_font_sizes/font_size = 50
text = "RETRY"

[node name="main_menu" type="Button" parent="FinalScorePanel"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -480.0
offset_top = -302.0
offset_right = -200.0
offset_bottom = -152.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_vbgg1")
theme_override_font_sizes/font_size = 50
text = "MAIN MENU"

[node name="next_level" type="Button" parent="FinalScorePanel"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -776.0
offset_top = -266.0
offset_right = -496.0
offset_bottom = -116.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_vbgg1")
theme_override_font_sizes/font_size = 50
text = "NEXT LEVEL"

[connection signal="pressed" from="VBoxContainer/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Option3" to="." method="_on_option_3_pressed"]
